--- a/public/style.css
+++ b/public/style.css
@@ -1,51 +1,42 @@
 * {
     box-sizing: border-box;
 }
-
 html,
 body {
     height: 100%;
     margin: 0;
     padding: 0;
 }
-
 #chat {
     display: flex;
     flex-direction: column;
-    max-height: 100%;
+    height: 100%;
 }
-
+#messagesWrapper {
+    display: flex;
+    flex-direction: column-reverse;
+    overflow-y: auto;
+}
 #displayMessages {
     flex-grow: 1;
     padding: 1em;
-    margin-bottom: 70px;
-    overflow-y: scroll;
-    max-height: 100%;
+    flex-basis: 100%;
 }
 #colorForm {
     display: flex;
     align-items: center;
 }
-
 #colorForm * {
     margin: 1em;
 }
-
 input[type="text"] {
     border: 5px solid black;
     width: 100%;
     padding: 1em;
 }
-
 span {
     font-weight: bold;
     font-size: 1.1em;
-}
-
-#forms {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
 }
 #currentColor {
     height: 2em;
@@ -53,7 +44,6 @@ span {
     display: inline-block;
     margin: 0;
 }
-
 .mouse {
     background-color: black;
     position: absolute;
